--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "budget",
   "version": "1.0.0",
-  "homegape": "https://TSYRENCHICK.github.io/TSYRENCHICK.github.io.git",
-  "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://TSYRENCHICK.github.io/TSYRENCHICK.github.io.git",
+  "main": "index.js",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -10,14 +10,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "react-scripts build"
+    "build": "expo build:web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.6",
     "react-native-web": "~0.19.6",
     "youtube-player": "^5.6.0"
